[metadata]
platforms         = any
description       =
long_description  = file: README.rst
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Network Automation

[tool:pytest]
testpaths       = tests
norecursedirs   = .git

[flake8]
exclude           = env,.git,docs
ignore            = E203, W503
; E203 = whitespace before ':' - black and flake8 disagree
; W503 = line break before binary operator - black and flake8 disagree
max-line-length   = 88


[bdist_wheel]
universal = 0
